objects/vlocity_cmt__VlocityTrackingEntry__c.object
<CustomObject>
    <fields>
        <fullName>ElapsedTime__c</fullName>
        <label>ElapsedTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElementName__c</fullName>
        <label>ElementName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElementStepNumber__c</fullName>
        <label>ElementStepNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElementType__c</fullName>
        <label>ElementType</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OmniScriptId__c</fullName>
        <label>OmniScriptId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OmniScriptType__c</fullName>
        <label>OmniScriptType</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackedAction__c</fullName>
        <label>TrackedAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackedCard__c</fullName>
        <label>TrackedCard</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingEvent__c</fullName>
        <label>TrackingEvent</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextId__c</fullName>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerInteractionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Interaction</label>
        <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>VlocityTrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerInteractionToken__c</fullName>
        <label>Customer Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResourceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Acuity Resource</label>
        <referenceTo>vlocity_cmt__VqResource__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>Vlocity_Tracking_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingService__c</fullName>
        <label>TrackingService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityInteractionToken__c</fullName>
        <label>Vlocity Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Tracking Entry</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>vlocity_cmt__TrackingService__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>TrackingEvent__c</columns>
        <columns>ElapsedTime__c</columns>
        <columns>ElementName__c</columns>
        <columns>ElementType__c</columns>
        <columns>ElementStepNumber__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OmniScriptId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vlocity Tracking Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Tracking Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>